The instructions div's were capturing all mouse events.  Fixed by adding overflow:hidden and resizing the div on hide / show events.

--- a/trunk/GameServer/static/css/main.css
+++ b/trunk/GameServer/static/css/main.css
@@ -42,15 +42,15 @@ body {
 
 #message {
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  width: 0;
+  height: 0;
   z-index: 10000;
+  overflow: hidden;
 }
 #message_background {
   width: 100%;
   height: 100%;
+  overflow: hidden;
   
   background-color: grey;
   
@@ -63,6 +63,7 @@ body {
   background-color: white;
   border: 1px black solid;
   position: absolute;
+  overflow: hidden;
   top: 1em;
   left: 1em;
   right: 1em;
